--- a/css/style.css
+++ b/css/style.css
@@ -15,15 +15,18 @@ body {
 	font-weight: 100;
 	color: #2E3030;
 	font-size: 12px;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased !important;
+
 }
 
 /*Just for this document*/
 
-#wrapper {
-	width: 90%;
+.wrapper {
+	width: 95%;
+	max-width: 1500px;
 	margin: 0 auto;
 	clear: both;
-	box-sizing: content-box;
 }
 
 section {
@@ -40,7 +43,6 @@ section {
 
 /*End just for this document*/
 
-/*Begin Styles for desktop*/
 
 /*Navigation stuff*/
 
@@ -49,7 +51,7 @@ nav {
 	background: #FFFFFF;
 	box-shadow: 0px 2px 7px 0px rgba(0,0,0,0.10);
 	box-sizing: border-box;
-	padding: 30px;
+	padding-top: 30px;
 	z-index: 2;
 	position: relative;
 }
@@ -62,14 +64,13 @@ nav a {
 	color: #07356A;
 	text-transform: uppercase;
 	float: left;
-	padding-right: 15px;
-	padding-left: 15px;
+	margin-right: 15px;
 }
 
 nav a:active, nav a:hover {
 	color: #0196E6;
 	border-bottom: 2px solid;
-	padding-bottom: 22px;
+	padding-bottom: 26px;
 }
 
 nav a.utilitylink, nav a.utilitylink:hover {
@@ -82,7 +83,6 @@ nav a.utilitylink, nav a.utilitylink:hover {
 	height: 34px;
 	width: 112px;
 	margin-top: -12px;
-	padding-left: 30px;
 	padding-right: 30px;
 }
 
@@ -100,8 +100,10 @@ nav a.utilitylink, nav a.utilitylink:hover {
 h1 {
 	font-size: 5em;
 	/*line-height: 72px;*/
+	padding-top: 5px;
 	padding-bottom: 20px;
 	font-weight: 100;
+	font-family: "Avenir-Light";
 }
 
 h2 {
@@ -149,17 +151,15 @@ p {
 	padding-bottom: 10px;
 }
 
-h5.breadcrumb {
-	font-size: 9px;
-}
-
 /*The footer*/
 
 footer {
 	background: #2E3030;
 	box-sizing: border-box;
-	padding: 65px;
+	padding-top: 65px;
+	padding-bottom: 65px;
 	margin-top: 20px;
+	clear: both;
 }
 
 footer h5 {
@@ -177,7 +177,7 @@ footer a {
 
 a {
 	font-size: 12px;
-	line-height: 18px;
+	/*line-height: 18px;*/
 	font-weight: 300;
 	color: #0055B7;
 	text-decoration: none;
@@ -197,12 +197,6 @@ button {
 	border: none;
 	margin: 20px auto;
 	padding: 20px 40px;
-	font-family: "Gotham", sans-serif;
-	font-weight: 400;
-	font-size: 12px;
-	color: #FFFFFF;
-	letter-spacing: 1px;
-	text-transform: uppercase;
 	cursor: pointer;
 }
 
@@ -215,7 +209,7 @@ button:disabled {
 	cursor: not-allowed;
 }
 
-.smallbutton {
+.buttonsmall {
 	padding: 14px 25px;
 }
 
@@ -228,8 +222,17 @@ button:disabled {
 }
 
 
+/*cta text styles that also goes with non-button ctas!*/
 
-/*Disabled styles, just to show them visually on the page without having to do any jquery*/
+.ctatext {
+	font-family: "Gotham", sans-serif;
+	font-weight: 400;
+	font-size: 12px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+}
+
+/*Disabled button styles, just to show them visually on the page without having to do any jquery*/
 
 .back {
 	background: #E9ECF2;
@@ -241,100 +244,91 @@ button:disabled {
 }
 
 
-/*non-button CTAS and such*/
+/*Button group styles*/
 
-.ctablue {
-	font-family: "Gotham", sans-serif;
-	font-weight: 400;
-	font-size: 12px;
-	color: #0055B7;
-	letter-spacing: 1px;
-	text-transform: uppercase;
+.buttonxl {
+	width: 39.33em;
+	height: 27.833em;
+	box-shadow: 0px 0px 10px 0px rgba(65,65,63,0.33);
+	border-radius: 2px;
+	padding: 85px 20px;
+	box-sizing: border-box;
+	margin: 20px;
+	float: left;
 }
 
-.ctawhite {
-	font-family: "Gotham", sans-serif;
-	font-weight: 400;
-	font-size: 12px;
+.buttonxl:hover {
+	box-shadow: 0px 0px 20px 0px rgba(65,65,63,0.53);
+}
+
+/*Background Color classes*/
+
+.navybg {
+	background: #07356A;
+}
+
+.redbg {
+	background: #D6001C;
+}
+
+.mintbg {
+	background: #00A499;
+}
+
+.purplebg {
+	background: #702082;
+}
+
+.goldbg {
+	background: #F99D1C;
+}
+
+.gray5 {
+	background: #F7F7F7;
+}
+
+.contactusbg {
+	background-image: url("../images/contactusbg.png");
+}
+
+/*Text modification classes*/
+
+.white {
 	color: #fff;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	padding-right: 8px;
 }
 
-.ctapurple, .ctapurple:hover {
-	font-family: "Gotham", sans-serif;
-	font-weight: 400;
-	font-size: 12px;
-	color: #702082;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	padding-right: 8px;
-}
-
-.seedetails {
-	padding-left: 8px;
-}
-
-/*Color classes*/
-
-/*You can apply this class to h1, h2, h4, h5*/
-h1.white, h2.white, h4.white, h5.white {
-	color: #fff;
-}
-
-/*You can apply this class to h2, h4, p*/
-h2.center, h4.center, p.center {
-	text-align: center;
-}
-
-/*You can apply this class to h1, h2, h3, h4*/
-h1.whitecenter, h2.whitecenter, h3.whitecenter, h4.whitecenter {
-	color: #fff;
-	text-align: center;
-}
-
-/*You can apply this class to h4 */
-h4.boldblue {
-	font-weight: 400;
+.blue {
 	color: #0055B7;
 }
 
-/*You can apply these classes to h4, h6*/
-
-h4.boldmint, h6.boldmint {
-	font-weight: 400;
+.mint {
 	color: #00A499;
 }
 
-.boldred {
-	font-weight: 400;
+.red {
 	color: #D6001C;
 }
 
-.boldpurple {
-	font-weight: 400;
+.purple {
 	color: #702082;
 }
 
-.boldgreen {
-	font-weight: 400;
+.green {
 	color: #27AE60;
 }
 
-
-/*Only apply these classes to h6*/
-
-.boldcenter {
-	font-weight: 400;
+.center {
 	text-align: center;
 }
+
 
 .extrabold {
 	font-weight: 500;
 }
 
-/*Only apply these classes to p */
+.bold {
+	font-weight: 400;
+}
 
 .offerstext {
 	color: #2E3030;
@@ -350,28 +344,39 @@ h4.boldmint, h6.boldmint {
 	text-align: center;
 }
 
-/*These styles can be used for terms links that are seen throughout the site*/
-a .termslinkwhite {
+.smalltext {
 	font-size: 10px;
-	color: #fff;
 }
 
-a .termslinkgray {
-	font-size: 10px;
-	color: #9B9B9B;
+.clearfix:after {
+	clear: both;
+	content: "";
+	display: block;
 }
 
-/*Used for legal stuff*/
-.smalltextwhite {
-	font-size: 7px;
-	color: #fff;
+/*Form fields*/
+
+input[type="text"] {
+  display: block;
+  margin-bottom: 10px;
+  width: 507px;
+  height: 50px;
+  appearance: none;
+  box-shadow: none;
+  border-radius: none;
+  border: 1px solid #E9ECF2;
+  font-size: 1.4166em;
+  color: #585959;
+  padding-left: 10px;
 }
 
-.smalltextgray {
-	font-size: 7px;
-	color: #2E3030;
+input[type="text"]:focus {
+  border: 1px solid #0196E6;
 }
 
+.invalid {
+	border: 1px solid #D6001C;
+}
 
 /*Mobile styles */
 /*If you need guidance on other breakpoints let me know abby@motivatedesign.com*/
