--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,38 @@
-/*@font-face {
-  font-family: "Avenir";
-  src: url('../fonts/avenir/AvenirLTStd-Light.woff2') format('woff2'), 
-       url('../fonts/avenir/AvenirLTStd-Light.woff') format('woff'), 
-       url('../fonts/avenir/AvenirLTStd-Light.ttf')  format('truetype')
-}*/
+@font-face {
+	font-family: "avenir";
+	src: url("../fonts/avenir-roman-webfont.eot");
+	src: url("../fonts/avenir-roman-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir-roman-webfont.woff2") format("woff2"), url("../fonts/avenir-roman-webfont.woff") format("woff"), url("../fonts/avenir-roman-webfont.ttf") format("truetype");
+	font-weight: 400;
+}
+
+@font-face {
+	font-family: "avenir";
+	src: url("../fonts/avenir-light-webfont.eot");
+	src: url("../fonts/avenir-light-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir-light-webfont.woff2") format("woff2"), url("../fonts/avenir-light-webfont.woff") format("woff"), url("../fonts/avenir-light-webfont.ttf") format("truetype");
+	font-weight: 300;
+}
+
+@font-face {
+	font-family: "avenir";
+	src: url("../fonts/avenir-medium-webfont.eot");
+	src: url("../fonts/avenir-medium-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir-medium-webfont.woff2") format("woff2"), url("../fonts/avenir-medium-webfont.woff") format("woff"), url("../fonts/avenir-medium-webfont.ttf") format("truetype");
+	font-weight: 500;
+}
+
+@font-face {
+	font-family: "avenir";
+	src: url("../fonts/avenir-heavy-webfont.eot");
+	src: url("../fonts/avenir-heavy-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir-heavy-webfont.woff2") format("woff2"), url("../fonts/avenir-heavy-webfont.woff") format("woff"), url("../fonts/avenir-heavy-webfont.ttf") format("truetype");
+	font-weight: 600;
+}
+
+@font-face {
+	font-family: "avenir";
+	src: url("../fonts/avenir-black-webfont.eot");
+	src: url("../fonts/avenir-black-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir-black-webfont.woff2") format("woff2"), url("../fonts/avenir-black-webfont.woff") format("woff"), url("../fonts/avenir-black-webfont.ttf") format("truetype");
+	font-weight: 700;
+	font-style: normal;
+}
 
 * {
 	padding: 0;
@@ -11,8 +40,8 @@
 }
 
 body {
-	font-family: "Avenir", sans-serif;
-	font-weight: 100;
+	font-family: "avenir", sans-serif;
+	font-weight: 400;
 	color: #2E3030;
 	font-size: 12px;
 	text-rendering: optimizeLegibility;
@@ -102,35 +131,34 @@ h1 {
 	/*line-height: 72px;*/
 	padding-top: 5px;
 	padding-bottom: 20px;
-	font-weight: 100;
-	font-family: "Avenir-Light";
+	font-weight: 300;
 }
 
 h2 {
 	font-size: 3.33em;
 	/*line-height: 49px;*/
-	font-weight: 100;
+	font-weight: 300;
 	padding-bottom: 20px;
 }
 
 h3 {
 	font-size: 2.917em;
 	/*line-height: 40px;*/
-	font-weight: 100;
+	font-weight: 300;
 	padding-bottom: 15px;
 }
 
 h4 {
 	font-size: 1.6667em;
 	/*line-height: 26px;*/
-	font-weight: 100;
+	font-weight: 300;
 	padding-bottom: 10px;
 }
 
 h5 {
 	font-size: 1em;
 	/*line-height: 16px;*/
-	font-weight: 800;
+	font-weight: 700;
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	padding-bottom: 0.833em;
@@ -138,7 +166,7 @@ h5 {
 
 h6 {
 	font-size: 1em;
-	font-weight: 200;
+	font-weight: 300;
 	/*line-height: 21px;*/
 	color: #585959;
 	padding-bottom: 0.833em;
@@ -149,6 +177,7 @@ p {
 	/*line-height: 26px;*/
 	color: #585959;
 	padding-bottom: 10px;
+	font-weight: 300;
 }
 
 /*The footer*/
@@ -169,7 +198,7 @@ footer h5 {
 
 footer a {
 	color: #fff;
-	font-weight: 200;
+	font-weight: 400;
 	font-size: 12px;
 	line-height: 21px;
 	text-decoration: none;
@@ -225,8 +254,8 @@ button:disabled {
 /*cta text styles that also goes with non-button ctas!*/
 
 .ctatext {
-	font-family: "Gotham", sans-serif;
-	font-weight: 400;
+	font-family: "Gotham-Medium", sans-serif;
+/*	font-weight: 400;*/
 	font-size: 12px;
 	letter-spacing: 1px;
 	text-transform: uppercase;
@@ -384,8 +413,8 @@ input[type="text"]:focus {
 @media only screen and (max-width: 750px) {
 
 body {
-	font-family: "Avenir", sans-serif;
-	font-weight: 100;
+	font-family: "avenir", sans-serif;
+	font-weight: 300;
 	color: #2E3030;
 }
 
