--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,15 @@
 @font-face {
 	font-family: "avenir";
-	src: url("../fonts/avenir-roman-webfont.eot");
-	src: url("../fonts/avenir-roman-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir-roman-webfont.woff2") format("woff2"), url("../fonts/avenir-roman-webfont.woff") format("woff"), url("../fonts/avenir-roman-webfont.ttf") format("truetype");
-	font-weight: 400;
+	src: url("../fonts/avenir-light-webfont.eot");
+	src: url("../fonts/avenir-light-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir-light-webfont.woff2") format("woff2"), url("../fonts/avenir-light-webfont.woff") format("woff"), url("../fonts/avenir-light-webfont.ttf") format("truetype");
+	font-weight: 300;
 }
 
 @font-face {
 	font-family: "avenir";
-	src: url("../fonts/avenir-light-webfont.eot");
-	src: url("../fonts/avenir-light-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir-light-webfont.woff2") format("woff2"), url("../fonts/avenir-light-webfont.woff") format("woff"), url("../fonts/avenir-light-webfont.ttf") format("truetype");
-	font-weight: 300;
+	src: url("../fonts/avenir-roman-webfont.eot");
+	src: url("../fonts/avenir-roman-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir-roman-webfont.woff2") format("woff2"), url("../fonts/avenir-roman-webfont.woff") format("woff"), url("../fonts/avenir-roman-webfont.ttf") format("truetype");
+	font-weight: 400;
 }
 
 @font-face {
@@ -31,6 +31,14 @@
 	src: url("../fonts/avenir-black-webfont.eot");
 	src: url("../fonts/avenir-black-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir-black-webfont.woff2") format("woff2"), url("../fonts/avenir-black-webfont.woff") format("woff"), url("../fonts/avenir-black-webfont.ttf") format("truetype");
 	font-weight: 700;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "gotham";
+	src: url("../fonts/gotham-bold-webfont.eot");
+	src: url("../fonts/gotham-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/gotham-bold-webfont.woff2") format("woff2"), url("../fonts/gotham-bold-webfont.woff") format("woff"), url("../fonts/gotham-bold-webfont.ttf") format("truetype");
+	font-weight: 600;
 	font-style: normal;
 }
 
@@ -86,8 +94,8 @@ nav {
 }
 
 nav a {
-	font-family: "Gotham", sans-serif;
-	font-weight: 400;
+	font-family: "gotham", sans-serif;
+	font-weight: 600;
 	font-size: 12px;
 	letter-spacing: 1px;
 	color: #07356A;
@@ -161,7 +169,7 @@ h5 {
 	font-weight: 700;
 	letter-spacing: 1px;
 	text-transform: uppercase;
-	padding-bottom: 0.833em;
+	padding-bottom: 10px;
 }
 
 h6 {
@@ -169,7 +177,7 @@ h6 {
 	font-weight: 300;
 	/*line-height: 21px;*/
 	color: #585959;
-	padding-bottom: 0.833em;
+	padding-bottom: 10px;
 }
 
 p {
@@ -254,8 +262,8 @@ button:disabled {
 /*cta text styles that also goes with non-button ctas!*/
 
 .ctatext {
-	font-family: "Gotham-Medium", sans-serif;
-/*	font-weight: 400;*/
+	font-family: "gotham", sans-serif;
+	font-weight: 600;
 	font-size: 12px;
 	letter-spacing: 1px;
 	text-transform: uppercase;
@@ -272,18 +280,27 @@ button:disabled {
 	background: #f7f7f7;
 }
 
-
 /*Button group styles*/
 
+.buttonxlwrapper {
+	width: 80%;
+	margin: 0 auto;
+}
+
 .buttonxl {
-	width: 39.33em;
+	width: 48%;
 	height: 27.833em;
 	box-shadow: 0px 0px 10px 0px rgba(65,65,63,0.33);
 	border-radius: 2px;
-	padding: 85px 20px;
+	padding: 85px 60px 85px 20px;
+	margin: 20px auto;
 	box-sizing: border-box;
-	margin: 20px;
 	float: left;
+}
+
+.buttonxl:last-of-type {
+	margin-right: 0px;
+	float: right;
 }
 
 .buttonxl:hover {
@@ -322,6 +339,10 @@ button:disabled {
 
 /*Text modification classes*/
 
+.gray1 {
+	color: #2E3030;
+}
+
 .white {
 	color: #fff;
 }
@@ -350,13 +371,12 @@ button:disabled {
 	text-align: center;
 }
 
-
-.extrabold {
-	font-weight: 500;
+.bold {
+	font-weight: 600;
 }
 
-.bold {
-	font-weight: 400;
+.extrabold {
+	font-weight: 700;
 }
 
 .offerstext {
